# python-decorators

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
test/: test_showing_pytest_decorators.py
