[tool.poetry]
name = "decorators"
version = "0.0.1"
description = "Examples of using Python decorators"
authors = ["Andy Rimmer <rimmera@elsevier.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
pre-commit = "^2.1.1"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/resources
  | tests/docker
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
